* Wed Jul 11 2018 Chris Smeele <c.j.smeele@uu.nl> - 4.2.3_1.4.0-1
- Now supports iRODS 4.2.3 client libraries

* Mon Mar 26 2018 Chris Smeele <c.j.smeele@uu.nl> - 4.2.2_1.4.0-1
- Added Range header support (partial downloads)
- Added support for auto-installs and packaging on Debian-based distros
- Now supports iRODS 4.2.2 client libraries

* Fri Sep 8 2017 Chris Smeele <c.j.smeele@uu.nl> - 4.2.1_1.3.0-1
- Added support for themed listings
- Fixed: Error in path handling when ExposedRoot is '/'
- Fixed: Listing HTML links were not always correct when Location was not '/'.

* Mon Aug 7 2017 Chris Smeele <c.j.smeele@uu.nl> - 4.2.1_1.2.0-1
- Added an anonymous access mode

* Tue Jul 19 2017 Chris Smeele <c.j.smeele@uu.nl> - 4.2.1_1.1.1-1
- Changed build system to CMake
- Now supports iRODS 4.2.1 client libraries

* Tue Jul 18 2017 Chris Smeele <c.j.smeele@uu.nl> - 4.2_1.1.1-2
- Fixed RPM dependencies. Now requires exact version irods-runtime 4.2.0.

* Mon Feb 27 2017 Chris Smeele <c.j.smeele@uu.nl> - 4.2_1.1.1
- Directory listing links now work when current URI does not end with a slash.

* Mon Dec 19 2016 Chris Smeele <c.j.smeele@uu.nl> - 4.2_1.1.0
- Updated for iRODS 4.2 compatibility.

* Wed Aug 3 2016 Chris Smeele <c.j.smeele@uu.nl> - 1.1.0
- An Etag header is now emitted for data objects on GET, HEAD and PROPFIND
- Basic HTML directory listings are generated in response to GET requests on
  collections, allowing web browser access.
- Support for partial uploads was added (using the Range request header)
- Davrods no longer requires being setup in a vhost's root path '/',
  you can now choose an arbitrary path for your Davrods <Location> block

* Wed Jun 29 2016 Chris Smeele <c.j.smeele@uu.nl> - 1.0.1
- Fixed a COPY method issue regarding filename length

* Tue Jun 28 2016 Chris Smeele <c.j.smeele@uu.nl> - 1.0.0
- Initial public version

* Tue Jun 28 2016 Chris Smeele <c.j.smeele@uu.nl> - 0.9.5
- Fixed SSL shutdown bug